--- a/package.json
+++ b/package.json
@@ -1,40 +1,43 @@
 {
-  "name": "react-generator-crud-typescript",
+  "name": "react-photo-album-typescript",
   "version": "1.0.0",
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.6.4",
-    "@babel/eslint-parser": "^7.15.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
-    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
-    "@babel/runtime": "^7.15.3",
-    "antd": "^4.16.13",
-    "axios": "^0.21.1",
+    "@ant-design/icons": "4.6.4",
+    "@babel/eslint-parser": "7.15.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.14.5",
+    "@babel/plugin-proposal-optional-chaining": "7.14.5",
+    "@babel/runtime": "7.15.3",
+    "@testing-library/user-event": "13.2.1",
+    "antd": "4.16.13",
+    "axios": "0.21.1",
     "connected-react-router": "6.5.2",
     "history": "4.10.1",
-    "hygen": "^6.1.0",
-    "immutable": "^4.0.0-rc.14",
-    "jest-config": "^27.1.1",
-    "jquery": "^3.5.1",
-    "lodash": "^4.17.21",
+    "hygen": "6.1.0",
+    "immutable": "4.0.0-rc.14",
+    "jest-config": "27.1.1",
+    "jquery": "3.5.1",
+    "lodash": "4.17.21",
     "merge": "1.2.1",
-    "msw": "^0.35.0",
-    "popper.js": "^1.16.0",
-    "prop-types": "^15.7.2",
-    "qs": "^6.10.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "moment": "2.29.1",
+    "msw": "0.35.0",
+    "popper.js": "1.16.0",
+    "prop-types": "15.7.2",
+    "qs": "6.10.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-redux": "7.1.1",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "4.0.3",
     "reactstrap": "8.1.1",
     "redux": "4.0.4",
-    "redux-devtools-extension": "^2.13.9",
+    "redux-devtools-extension": "2.13.9",
     "redux-thunk": "2.3.0",
-    "sass": "^1.39.0",
-    "svgo": "1.3.0"
+    "sass": "1.39.0",
+    "svgo": "1.3.0",
+    "typescript": "3.9.10"
   },
   "devDependencies": {
     "@babel/cli": "7.10.5",
@@ -42,8 +45,8 @@
     "@babel/plugin-proposal-class-properties": "7.10.4",
     "@babel/preset-env": "7.10.4",
     "@babel/preset-react": "7.10.4",
-    "@storybook/linter-config": "^3.1.2",
-    "@testing-library/react": "^12.0.0",
+    "@storybook/linter-config": "3.1.2",
+    "@testing-library/react": "12.0.0",
     "@types/history": "4.7.3",
     "@types/jest": "24.0.19",
     "@types/node": "12.11.6",
@@ -53,22 +56,23 @@
     "@types/react-router": "5.1.2",
     "@types/react-router-dom": "5.1.0",
     "@types/reactstrap": "8.0.6",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
+    "@typescript-eslint/eslint-plugin": "4.29.3",
+    "@typescript-eslint/parser": "4.29.3",
     "cross-env": "6.0.3",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^13.0.1",
-    "eslint-plugin-flowtype": "^3.13.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.4.0",
-    "eslint-plugin-jest-dom": "^3.9.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "eslint-plugin-testing-library": "^4.12.0",
-    "nan": "^2.14.1",
-    "typescript": "^3.9.10"
+    "eslint": "7.32.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-airbnb-typescript": "13.0.1",
+    "eslint-plugin-flowtype": "3.13.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.4.0",
+    "eslint-plugin-jest-dom": "3.9.0",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "1.7.0",
+    "eslint-plugin-testing-library": "4.12.0",
+    "jest": "^26.6.0",
+    "nan": "2.14.1",
+    "ts-jest": "^26.5.6"
   },
   "scripts": {
     "new:comp": "hygen new component",
@@ -77,7 +81,7 @@
     "new:state": "hygen new state",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "cross-env CI=true react-scripts test --env=jsdom",
+    "test": "jest",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/**/*.ts ./src/**/*.tsx"
   },
