--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "immutable": "4.0.0-rc.14",
     "jest-config": "27.1.1",
     "jquery": "3.5.1",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.21",
     "merge": "1.2.1",
     "moment": "2.29.1",
     "msw": "0.35.0",
@@ -49,6 +49,7 @@
     "@testing-library/react": "12.0.0",
     "@types/history": "4.7.3",
     "@types/jest": "24.0.19",
+    "@types/lodash": "^4.14.176",
     "@types/node": "12.11.6",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
