--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "4.6.4",
+    "@ant-design/icons": "^4.7.0",
     "@babel/eslint-parser": "7.15.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.14.5",
     "@babel/plugin-proposal-optional-chaining": "7.14.5",
@@ -46,6 +46,7 @@
     "@babel/preset-env": "7.10.4",
     "@babel/preset-react": "7.10.4",
     "@storybook/linter-config": "3.1.2",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "12.0.0",
     "@types/history": "4.7.3",
     "@types/jest": "24.0.19",
